[package]
name = "be-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
simple_logger = "4.3.0"
