[package]
name = "be-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
simple_logger = "4.3.0"
rumqttc = "0.24.0"
futures = "0.3.30"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
ctrlc = "3.4.4"
async-trait = "0.1.79"
paho-mqtt = "0.12.3"
reqwest = "0.12.3"
chrono = "0.4.37"
tokio-postgres = "0.7.10"
serde_json = {version = "1.0.117", features = ["raw_value"]}
serde = { version = "1.0.203", features = ["derive"] }
sqlx = {version = "0.7", features= ["runtime-async-std", "postgres"]}
time = "0.3.36"